# async_dns_resolver

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
include/dns_query/: dns_query.cpp  dns_query.h
include/dns_resolve/: dns_resolve.cpp  dns_resolve.h
tests/: CMakeLists.txt  test_cares_features.cpp  test_dns_query.cpp
